fix: final polish for 10/10 - split long READMEs, fix duplicates, add diagrams
Split remaining long READMEs (24 files):
- Mini-projects (15 files split)
- Collections README (split)
- Senior content (7 files split)

Fix duplicate file names (4 files renamed):
- Animal.java → MethodOverridingAnimal.java
- Dog.java → MethodOverridingDog.java
- Car.java → CompositionCar.java
- Employee.java → CloningEmployee.java

Add Mermaid diagrams (7 files):
- JVM Memory Model (architecture diagram)
- GC algorithms (decision tree)
- JVM internals (architecture diagram)
- GC selection (decision tree)
- Collections (selection guide)
- Thread states (state diagram)
- Design patterns (selection guide)